--- a/internal/ts-worker/package.json
+++ b/internal/ts-worker/package.json
@@ -34,7 +34,8 @@
     "dependencies": {
         "source-map-support": "^0.5.12",
         "ts-node": "^8.2.0",
-        "tslib": "^2.4.0"
+        "tslib": "^2.4.0",
+        "typescript": "^4.6.1-rc"
     },
     "publishConfig": {
         "access": "public"
