--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,6 @@ jobs:
 
     name: "${{ matrix.os.name }} (${{ matrix.runtime.label }})"
     runs-on: ${{ matrix.os.target }}
-    needs:
-    - version
 
     steps:
     - uses: actions/checkout@v3
@@ -128,11 +126,11 @@ jobs:
 
     - name: build
       run: |
-        gulp clean
+        yarn run clean
         yarn run prebuild
-        gulp build
+        yarn run build
 
     - name: verify
       run: |
-        gulp verify
-        node node_modules/workspaces-foreach run prepack
+        yarn run verify
+        yarn run prepack
