--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
-  "version": "1.1.0-alpha.202211052202",
+  "version": "1.1.0-alpha.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
     "internal/*",
-    "packages/*"
+    "packages/*",
+    "native/*"
+  ],
+  "ignoreChanges": [
+    "native/**/*"
   ]
 }
