--- a/native/equatable-native-darwin-x64/package.json
+++ b/native/equatable-native-darwin-x64/package.json
@@ -14,8 +14,12 @@
         "node": "^16 || ^18",
         "electron": "^21 || ^20 || ^19 || ^18 || ^17 || ^16 || ^15"
     },
-    "os": ["darwin"],
-    "cpu": ["x64"],
+    "os": [
+        "darwin"
+    ],
+    "cpu": [
+        "x64"
+    ],
     "publishConfig": {
         "access": "public"
     }
