--- a/packages/equatable-native/configurations.json
+++ b/packages/equatable-native/configurations.json
@@ -38,14 +38,14 @@
 
     {
         "runtime": "electron",
-        "target": [21, 20, 19, 18, 17, 16, 15],
+        "target": [23, 22, 21, 20, 19, 18, 17, 16, 15],
         "target_platform": ["win32"],
         "target_arch": ["ia32", "x64"],
         "args": ["--dist-url=https://electronjs.org/headers"]
     },
     {
         "runtime": "electron",
-        "target": [21, 20, 19, 18, 17, 16, 15],
+        "target": [23, 22, 21, 20, 19, 18, 17, 16, 15],
         "target_platform": ["linux"],
         "target_arch": ["x64", "arm64"],
         "args": ["--dist-url=https://electronjs.org/headers"]
@@ -54,7 +54,7 @@
         "runtime": "electron",
         "target_platform": ["linux"],
         "target_arch": ["armhf"],
-        "target": [21, 20, 19, 18, 17, 16, 15],
+        "target": [23, 22, 21, 20, 19, 18, 17, 16, 15],
         "args": ["--dist-url=https://electronjs.org/headers"],
         "env": { "npm_config_arch": "arm" }
     },
@@ -62,14 +62,14 @@
         "runtime": "electron",
         "target_platform": ["alpine"],
         "target_arch": ["x64"],
-        "target": [21, 20, 19, 18, 17, 16, 15],
+        "target": [23, 22, 21, 20, 19, 18, 17, 16, 15],
         "args": ["--dist-url=https://electronjs.org/headers"]
     },
     {
         "runtime": "electron",
         "target_platform": ["darwin"],
         "target_arch": ["x64", "arm64"],
-        "target": [21, 20, 19, 18, 17, 16, 15],
+        "target": [23, 22, 21, 20, 19, 18, 17, 16, 15],
         "args": ["--dist-url=https://electronjs.org/headers"]
     }
 ]
