Update supported engines

--- a/native/equatable-native-alpine-x64/package.json
+++ b/native/equatable-native-alpine-x64/package.json
@@ -11,8 +11,8 @@
         }
     },
     "engines": {
-        "node": "^16 || ^18",
-        "electron": "^21 || ^20 || ^19 || ^18 || ^17 || ^16 || ^15"
+        "node": "^16 || ^18 || ^20",
+        "electron": "^23 || ^22 || ^21 || ^20 || ^19 || ^18 || ^17 || ^16 || ^15"
     },
     "os": [
         "alpine"
