--- a/packages/struct-type/tsconfig.json
+++ b/packages/struct-type/tsconfig.json
@@ -8,6 +8,7 @@
     "include": ["src/**/*.ts"],
     "references": [
         { "path": "../type-model" },
+        { "path": "../indexed-object" },
     ],
     "esmDir": "dist/esm"
 }
