--- a/packages/async-delay/package.json
+++ b/packages/async-delay/package.json
@@ -32,6 +32,9 @@
     "dependencies": {
         "@esfx/cancelable": "workspace:*"
     },
+    "devDependencies": {
+        "@esfx/internal-guards": "workspace:*"
+    },
     "publishConfig": {
         "access": "public"
     },
