--- a/packages/async-delay/tsconfig.json
+++ b/packages/async-delay/tsconfig.json
@@ -6,7 +6,11 @@
     },
     "include": ["src/**/*.ts"],
     "references": [
+        // dependencies
         { "path": "../cancelable" },
+
+        // devDependencies
+        { "path": "../../internal/guards" },
     ],
     "esmDir": "dist/esm"
 }
